# WhxChat

./: .gitignore  LICENSE  README.md
.VSCodeCounter/2024-11-30_00-16-54/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Counter/: details.md  results.md
QtPanel/: .gitignore  WhxChat.pro  backgrounddialog.cpp  backgrounddialog.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwidget.cpp  chatuserwidget.h  chatuserwidget.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  customizeedit.cpp  customizeedit.h  global.cpp  global.h  httpmanager.cpp  httpmanager.h  listitembase.cpp  listitembase.h  loadingdialog.cpp  loadingdialog.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+16 more)
QtPanel/resources/: config.ini
QtPanel/style/: stylesheet.qss
ServerPanel/ChatServer/: CMakeLists.txt
ServerPanel/ChatServer/config/: config.ini
ServerPanel/ChatServer/include/: AsioIOContextPool.h  CServer.h  CSession.h  ConfigManager.h  LogManager.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlManager.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  const.h
ServerPanel/ChatServer/src/: AsioIOContextPool.cc  CServer.cc  CSession.cc  ChatServer.cc  ConfigManager.cc  LogicSystem.cc  MysqlDao.cc  MysqlManager.cc  RedisManafer.cc  StatusGrpcClient.cc
ServerPanel/GateServer/: CMakeLists.txt
ServerPanel/GateServer/config/: config.ini
ServerPanel/GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigManager.h  HttpConnection.h  LogManager.h  LogicSystem.h  MysqlDao.h  MysqlManager.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h  message.grpc.pb.h  message.pb.h
ServerPanel/GateServer/proto/: message.proto
ServerPanel/GateServer/src/: AsioIOServicePool.cc  CServer.cc  ConfigManger.cc  GateServer.cc  HttpConnection.cc  LogManager.cc  LogicSystem.cc  MysqlDao.cc  MysqlManager.cc  RedisManafer.cc  RedisManager.cc  StatusGrpcClient.cc  VerifyGrpcClient.cc  message.grpc.pb.cc  message.pb.cc
ServerPanel/StatusServer/: CMakeLists.txt
ServerPanel/StatusServer/config/: config.ini
ServerPanel/StatusServer/include/: AsioIOServicePool.h  ConfigManager.h  MysqlDao.h  RedisManager.h  StatusServiceImpl.h  const.h  message.grpc.pb.h
ServerPanel/StatusServer/proto/: message.proto
ServerPanel/StatusServer/src/: LogManager.cc  MysqlDao.cc  RedisManafer.cc  StatusServer.cc  StatusServiceImpl.cc
ServerPanel/VarifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
scripts/: ClientCompile.sh  ClientStart.sh  GateServerCompile.sh  GateServerStart.sh  RMALLEXTRA.sh  RmClient.sh  RmGateServer.sh  VarifyStart.sh  aChatServer.sh  aClient.sh  aGateServer.sh  aStatusServer.sh  bChatServerCompile.sh  bClientCompile.sh  bGateServerCompile.sh  bStatusCompile.sh  zConfigAllEnvir.sh
someElse/: Data.cc  RAII.cc  Salary.cc  api.cc  defer.cc  fmt.cc  inline.cc  meta.cc
test/: error_code.cc  heap.cc
